--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
 			creative design
 		</div>
 		<p class="b-about-item__text text-center">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat dignissimos quod harum officiis dolorem eius!
 		</p>
 	</div>
 </div>
